# vestec-sampling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format.sh  compile_commands.json  evaluate.sh  load_modules_archer.sh  make.bat  make.sh  make_archer.sh  make_cnl.bat  make_debug.sh  make_eigen.bat  make_externals.bat  make_externals.sh  make_externals_archer.sh  make_externals_debug.sh  make_mpir.bat  make_mpir.sh  make_release.bat  make_release.sh  patch_paraview.bat  patch_paraview.sh
doc/: CMakeLists.txt  GlobalArchitecture.vsd  SOS.txt  checklist_ac1.md  doxyfile.in
scripts/: CMakeLists.txt
scripts/catalyst/: TTK_CP_SPHERE.py  criticalPoints.py  criticalPoints_Evaluation.py  criticalPoints_Lorenz.py  criticalPoints_SpaceWeather.py  criticalPoints_TaylorGreen.py  criticalPoints_Vorticity.py  samplingKarman.py  space_weather_critical_points.py  space_weather_simplification.py
scripts/linux/: runAll_Lorenz_HPDA.sh  runAll_Lorenz_archer.sh  runAll_SpaceWeather_HPDA.sh  runAll_SpaceWeather_archer.sh  runAll_TaylorGreen_HPDA.sh  runAll_TaylorGreen_archer.sh  start.sh  startLorenz_HPDA.sh  startLorenz_archer.sh  startSpaceWeather.sh  startSpaceWeather_HPDA.sh  startSpaceWeather_archer.sh  startTaylorGreen_HPDA.sh  startTaylorGreen_archer.sh  start_HPDA.sh  start_Lorenz.pbs  start_SpaceWeather.pbs
scripts/paraview/: fire_criticalPoints.pvsm
scripts/windows/: start.bat  start3D.bat  startKarmanVortexStreet.bat  startLorenz.bat  startSpaceWeather.bat  startTaylorGreen.bat
src/: CMakeLists.txt  main.cpp
src/Adaptors/: VestecAdaptor.cpp  VestecAdaptor.hpp
src/plugins/: CMakeLists.txt
src/plugins/CriticalPointExtraction/: CMakeLists.txt  VestecCriticalPointExtraction.xml  VestecCriticalPointExtractionAlgorithm.cxx  VestecCriticalPointExtractionAlgorithm.h  VestecFilterRegister.cmake  VestecSimplicialGrid.cxx  VestecSimplicialGrid.h  vtk.module
src/plugins/InSituSampling/: CMakeLists.txt  SamplingPipeline.cpp  SamplingPipeline.hpp  UnsteadySource.h  VestecFilterRegister.cmake  VestecSampling.xml  VestecSamplingAlgorithm.cxx  VestecSamplingAlgorithm.h  vtk.module
src/plugins/RandomSeeding/: CMakeLists.txt  VestecFilterRegister.cmake  VestecSeeding.xml  VestecSeedingAlgorithm.cxx  VestecSeedingAlgorithm.h  vtk.module
src/plugins/singlePlugin/: CMakeLists.txt  paraview.plugin
test/: CMakeLists.txt  test_Dummy.cpp
